<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    android:padding="16dp"
    android:background="#f55"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="start"
        android:contentDescription="@string/launcher_icon"
        android:src="@mipmap/ic_launcher"
        android:textAlignment="gravity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="36sp"
        android:layout_gravity="center"
        android:textColor="@color/cardview_light_background"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/app_description"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/load_offline_data"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_element"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"/>
    </LinearLayout>
</LinearLayout>